test/pass/ImportRestrictedExport.curry
module ImportRestrictedExport where

data Test = Test { test :: Test }
