test/fail/MissingLabelInUpdateExport.curry
module MissingLabelInUpdateExport(R(C1)) where

data R = C1 { l1 :: String, l2 :: Int }
       | C2 { l1 :: String }
